[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main_scene/Skillshot trainer.gd" type="Script" id=2]
[ext_resource path="res://fonts/expression-pro-v1.1/ExpressionPro.otf" type="DynamicFontData" id=3]
[ext_resource path="res://ScreenShake.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1024, 0, 0, 0, 0, 0, 1024, 594.484, 0, 0, 0, 0, 0, 594.484, 0, 0, 0, 0, 0, 0 )
}

[node name="Skillshot trainer" type="Node2D"]
script = ExtResource( 2 )

[node name="Node2D" type="Node2D" parent="."]
z_index = -2

[node name="ColorRect" type="ColorRect" parent="Node2D"]
margin_right = 768.0
margin_bottom = 512.0
color = Color( 0.501961, 0.501961, 0.501961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Killcount" type="Label" parent="Node2D/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -180.0
margin_top = -30.0
margin_right = 180.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "KILLCOUNT: -1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wavecount" type="Label" parent="Node2D/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -181.0
margin_top = 9.0
margin_right = 174.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "WAVECOUNT: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 384, 256 )

[node name="Path2D" type="Path2D" parent="."]
scale = Vector2( 0.75, 0.861251 )
curve = SubResource( 3 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.7
autostart = true

[node name="SpawnPoint" type="Position2D" parent="."]
position = Vector2( 384, 256 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 384, 256 )
current = true

[node name="ScreenShake" parent="Camera2D" instance=ExtResource( 4 )]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="Player"]
